  which extends DigesterConfig and adds parameters "unicodeNormalizationIgnored"
  and "stringOutputType". Also created new implementations 
  SimpleStringDigesterConfig and EnvironmentStringDigesterConfig.
- Added Unicode Normalization step to StandardStringDigester, and also
  capabilities to return hexadecimal-encoded digest Strings instead of only
  BASE64 ones.


1.2
=======

- Merged jasypt-hibernate and jasypt-spring-security into main jasypt trunk.
- Package org.jasypt.util refactored. 
- Created PasswordEncryptor and TextEncryptor interfaces,
  to unify both basic- and strong-encryption implementations.
  NOTE: the old org.jasypt.util classes have been DEPRECATED, and will be
  removed in jasypt 1.3.
- Added org.jasypt.util.password.ConfigurablePasswordEncryptor for a more
  configurable way of using the "easy" password encryptor.
- Added binary utils (org.jasypt.util.binary) for easy encryption of binaries.
- Added numeric encryption functionalities: new 
  StandardPBEBigIntegerEncryptor and StandardPBEBigDecimalEncryptor in the 
  org.jasypt.encryption.pbe package
- Added new org.jasypt.util.numeric package with easy utils for numeric 
  encryption.
- Refactored org.jasypt.hibernate classes into new "encryptor" and "type" 
  subpackages.
- Added HibernatePBEEncryptorRegistry support for BigInteger, BigDecimal and
  Byte encryptors
- Added Hibernate type for encryption of binaries (byte[]) into SQL BLOBs
- Added Hibernate type for encryption of BigIntegers into SQL NUMERICs.
- Added Hibernate type for encryption of BigDecimals into SQL NUMERICs.
- Added Hibernate type for encryption of Bytes into SQL VARCHARs.
- Added Hibernate type for encryption of Shorts into SQL VARCHARs.
- Added Hibernate type for encryption of Integers into SQL VARCHARs.
- Added Hibernate type for encryption of Longs into SQL VARCHARs.
- Added Hibernate type for encryption of Floats into SQL VARCHARs.
- Added Hibernate type for encryption of Doubles into SQL VARCHARs.